--- a/Public/index.html
+++ b/Public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Stranger Scraper</title>
-	<link rel="stylesheet" type="text/css" href="/app/Public/style.css">
+	<link rel="stylesheet" type="text/css" href="./style.css">
 	<script
   src="https://code.jquery.com/jquery-3.2.1.js"
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
@@ -16,5 +16,5 @@
 	</div>
 	<button id="clearAll">Reset Articles</button>
 </body>
-<script type="text/javascript" src="/app/Public/app.js"></script>
+<script type="text/javascript" src="./app.js"></script>
 </html>
