--- a/Public/index.html
+++ b/Public/index.html
@@ -16,5 +16,5 @@
 	</div>
 	<button id="clearAll">Reset Articles</button>
 </body>
-<script type="text/javascript" src="./app.js"></script>
+<script type="text/javascript" src="/public/app.js"></script>
 </html>
